Added Alan AI voice assistant

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,21 @@
 .App {
   text-align: center;
+  
+}
+.imeg{ 
+  /* position: absolute; */
+  height: 60%;
+  margin-top:100px;
+  
+}
+.img{
+  background: linear-gradient(252.91deg, rgba(116, 235, 213, 0.52) 0.33%, #ACB6E5 96.31%);;
+  height: 100vh;
+  
+  /* margin-top: -230px; */
+  background-repeat: no-repeat;
+  background-size: cover;
+   
 }
 main {
   font-family: "Poppins", sans-serif;
@@ -57,6 +73,7 @@ main {
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
 
 .App-header {
   background-color: #282c34;
