--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,8 +15,8 @@ code {
 
 .text{ 
   font-family: 'Lora', serif;
-  font-size: 45px;
-  margin-top: 5em;
+  font-size: 65px !important;
+  /* margin-top: 5em; */
   background-color: transparent;
 
 }
