Made sidebar and links

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -138,3 +138,9 @@ ngo :visited {
   background-size: cover;
   background-attachment: fixed;
 }
+
+.sidetext{
+  margin : 2rem !important;
+  font-size: 40px !important;
+   font-weight: bold !important;
+}
