--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,9 +10,12 @@
   /* z-index: -1;   */
   position: fixed;
 }
-
+car{
+  background:linear-gradient(252.91deg, #74ebd585 0.33%, #ACB6E5 96.31%);
+  height: 100vh;
+}
 .img{
-  background: linear-gradient(252.91deg, rgba(116, 235, 213, 0.52) 0.33%, #ACB6E5 96.31%);
+  background: linear-gradient(252.91deg, #74ebd585 0.33%, #ACB6E5 96.31%);
   height: 100vh;
   display: flex;
   position: relative;
@@ -29,7 +32,16 @@ main {
   align-items: center;
   justify-content: center;
 }
-
+.glass-alt{
+  background: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.7),
+    rgba(255, 255, 255, 0.3)
+  ) !important;
+  border-radius: 0.5rem !important;
+  z-index: 2;
+  backdrop-filter: blur(2rem); 
+}
 .glass {
   min-height: 75vh;
   width: 40%;
@@ -140,7 +152,13 @@ ngo :visited {
 }
 
 .sidetext{
-  margin : 2rem !important;
-  font-size: 40px !important;
-   font-weight: bold !important;
+  margin : 1rem !important;
+  padding-left: 0.5rem !important;
+  font-size: 32px !important;
+  font-weight: semi-bold !important;
+  font-family: "Lora"
+}
+
+.wrap{
+  margin-left: 300px;
 }
